--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -2,15 +2,20 @@
 <html lang="en"
       xmlns:th="http://thmyelead.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout}">
+
+     >
 <head>
     <meta charset="UTF-8">
     <title>Create Product</title>
 </head>
 <body>
 <h1>Create Product</h1>
+<%@ taglib prefix="spring" url="http://www.springframework.org/tags" %>
+
+
+
+
 <form th:action="@{/products/new}" th:object="${product}" method="post">
-    <!-- Create product form fields -->
     <label for="name">Name:</label>
     <input type="text" id="name" th:field="*{name}" required><br>
 
@@ -22,6 +27,6 @@
 
     <button type="submit">Create</button>
 </form>
-<a th:href="@{/products}">Back to Product List</a>
+<a th:href="@{/products/list}">Back to Product List</a>
 </body>
 </html>
